Bug 1916680 - [devtools] Adapt cubic bezier swatch in High Contrast Mode. r=devtools-reviewers,jdescottes.
Add context-fill and context-stroke to the svg file, and style those in CSS.

Differential Revision: https://phabricator.services.mozilla.com/D230280

UltraBlame original commit: d16257430efc0bb7632676ec3635ea9cb8bcdb8c

--- a/devtools/client/themes/inspector-swatches.css
+++ b/devtools/client/themes/inspector-swatches.css
@@ -146,6 +146,18 @@
 
 .inspector-bezierswatch {
   background-image: url("chrome://devtools/skin/images/cubic-bezier-swatch.svg");
+  -moz-context-properties: stroke, fill;
+  fill: #fff;
+  stroke: #808080;
+
+  :root[forced-colors-active] & {
+    fill: ButtonFace;
+    stroke: var(--theme-icon-color);
+
+    &:hover {
+      stroke: var(--theme-icon-hover-color);
+    }
+  }
 }
 
 .inspector-filterswatch {
