--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -13,7 +13,11 @@
   font: message-box;
   font-size: var(--theme-body-font-size);
 
-  --tab-line-hover-color: rgba(0,0,0,.2);
+  --tab-line-hover-color: light-dark(
+    rgba(0,0,0,.2),
+    rgba(255,255,255,.2)
+  );
+
   --tab-line-selected-color: var(--blue-50);
   --toggle-thumb-color: light-dark(white, var(--grey-40));
   --toggle-thumb-color-pressed: white;
@@ -33,8 +37,8 @@
   --toggle-hover-track-color-pressed: var(--toggle-track-color-pressed);
   --toggle-hover-thumb-color: var(--toggle-thumb-color);
 
-  --searchbox-no-match-background-color: #ffe5e5;
-  --searchbox-no-match-stroke-color: var(--red-60);
+  --searchbox-no-match-background-color: light-dark(#ffe5e5, #402325);
+  --searchbox-no-match-stroke-color: light-dark(var(--red-60),var(--red-50));
   --searchbox-background-color: transparent;
   --searchbox-border-color: transparent;
 
@@ -65,6 +69,12 @@
     --toggle-disabled-thumb-color: GrayText;
     --toggle-track-disabled-opacity: 1;
 
+    /* From High Contrast Mode guidelines:
+       > Error inputs in our traditional design system use color to indicate they are destructive.
+       > We cannot do this in HCM, so the default INPUT style should be used instead.
+      Given this, we should use the default color.
+    */
+    --searchbox-no-match-stroke-color: var(--theme-icon-color);
     --searchbox-background-color: ButtonFace;
     --searchbox-border-color: ButtonText;
 
@@ -80,10 +90,6 @@
 
 :root.theme-dark {
   color-scheme: dark;
-
-  --tab-line-hover-color: rgba(255,255,255,.2);
-  --searchbox-no-match-background-color: #402325;
-  --searchbox-no-match-stroke-color: var(--red-50);
 }
 
 :root[platform="mac"] {
