Bug 1933989 - Disabled window dragging on group labels so clicks are registered as clicks even when slightly moving the mouse. r=desktop-theme-reviewers,emilio
Differential Revision: https://phabricator.services.mozilla.com/D230535

UltraBlame original commit: afa37cda8c973a21792526b6a86379e4391986d2

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -861,6 +861,7 @@
 }
 
 .tab-group-label {
+  -moz-window-dragging: no-drag;
   text-align: center;
   font-weight: var(--font-weight-bold);
   text-overflow: ellipsis;
