Bug 1934004 - Add a secret settings for the Unified Trust Panel r=android-reviewers,sanchaai
Differential Revision: https://phabricator.services.mozilla.com/D230606

UltraBlame original commit: 1fbc25920a096d95d67a9bc3a117f179d74d303e

--- a/mobile/android/fenix/app/src/main/res/xml/secret_settings_preferences.xml
+++ b/mobile/android/fenix/app/src/main/res/xml/secret_settings_preferences.xml
@@ -62,9 +62,12 @@
         app:iconSpaceReserved="false" />
     <SwitchPreference
         android:key="@string/pref_key_should_enable_felt_privacy"
-        app:iconSpaceReserved="false"
         android:title="@string/preferences_debug_felt_privacy"
-        />
+        app:iconSpaceReserved="false" />
+    <SwitchPreference
+        android:key="@string/pref_key_enable_unified_trust_panel"
+        android:title="@string/preferences_debug_settings_unified_trust_panel"
+        app:iconSpaceReserved="false" />
     <SwitchPreference
         android:defaultValue="false"
         android:key="@string/pref_key_enable_debug_drawer"
