Bug 1934082 - Part 1: Implement skeleton bottom sheet of the unified trust panel r=android-reviewers,sanchaai
Differential Revision: https://phabricator.services.mozilla.com/D230607

UltraBlame original commit: 442a6ec16419f173f0a2f7dee4e60f0d1db560a4

--- a/mobile/android/fenix/app/src/main/res/navigation/nav_graph.xml
+++ b/mobile/android/fenix/app/src/main/res/navigation/nav_graph.xml
@@ -175,6 +175,9 @@
     <action
         android:id="@+id/action_global_menuDialogFragment"
         app:destination="@id/menu_graph" />
+    <action
+        android:id="@+id/action_global_trustPanelFragment"
+        app:destination="@id/trust_panel_graph" />
 
     <dialog
         android:id="@+id/tabsTrayFragment"
@@ -326,6 +329,9 @@
         <action
             android:id="@+id/action_browserFragment_to_quickSettingsSheetDialogFragment"
             app:destination="@id/quickSettingsSheetDialogFragment" />
+        <action
+            android:id="@+id/action_browserFragment_to_trustPanelFragment"
+            app:destination="@id/trust_panel_graph" />
         <action
             android:id="@+id/action_browserFragment_to_reviewQualityCheckDialogFragment"
             app:destination="@id/reviewQualityCheckFragment" />
@@ -1600,6 +1606,73 @@
             <action
                 android:id="@+id/action_menuDialogFragment_to_loginsListFragment"
                 app:destination="@id/savedLogins" />
+        </dialog>
+    </navigation>
+
+    <navigation
+        android:id="@+id/trust_panel_graph"
+        app:startDestination="@id/trustPanelFragment">
+        <argument
+            android:name="sessionId"
+            app:argType="string" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <argument
+            android:name="url"
+            app:argType="string" />
+        <argument
+            android:name="isSecured"
+            app:argType="boolean" />
+        <argument
+            android:name="sitePermissions"
+            app:argType="mozilla.components.concept.engine.permission.SitePermissions"
+            app:nullable="true" />
+        <argument
+            android:name="certificateName"
+            android:defaultValue=" "
+            app:argType="string" />
+        <argument
+            android:name="permissionHighlights"
+            app:argType="mozilla.components.browser.state.state.content.PermissionHighlightsState" />
+        <argument
+            android:name="isTrackingProtectionEnabled"
+            app:argType="boolean" />
+        <argument
+            android:name="cookieBannerUIMode"
+            app:argType="org.mozilla.fenix.trackingprotection.CookieBannerUIMode" />
+        <dialog
+            android:id="@+id/trustPanelFragment"
+            android:name="org.mozilla.fenix.settings.trustpanel.TrustPanelFragment">
+            <argument
+                android:name="sessionId"
+                app:argType="string" />
+            <argument
+                android:name="title"
+                app:argType="string" />
+            <argument
+                android:name="url"
+                app:argType="string" />
+            <argument
+                android:name="isSecured"
+                app:argType="boolean" />
+            <argument
+                android:name="sitePermissions"
+                app:argType="mozilla.components.concept.engine.permission.SitePermissions"
+                app:nullable="true" />
+            <argument
+                android:name="certificateName"
+                android:defaultValue=" "
+                app:argType="string" />
+            <argument
+                android:name="permissionHighlights"
+                app:argType="mozilla.components.browser.state.state.content.PermissionHighlightsState" />
+            <argument
+                android:name="isTrackingProtectionEnabled"
+                app:argType="boolean" />
+            <argument
+                android:name="cookieBannerUIMode"
+                app:argType="org.mozilla.fenix.trackingprotection.CookieBannerUIMode" />
         </dialog>
     </navigation>
 </navigation>
