Bug 1933993 - Make bug 1933568 specific to subdialogs. r=desktop-theme-reviewers,dao
Non-subdialogs get sized via sizeToContent which does size to
max-content, not min-content.

Sizing subdialogs to max-content is possible, but not clear if we want
to go that rout, it'd make alert() and such unreasonably large depending
on the input for example...

Differential Revision: https://phabricator.services.mozilla.com/D230602

UltraBlame original commit: 8338bf5146e2ed29141334865b6700a5451aee95

--- a/toolkit/components/prompts/content/commonDialog.css
+++ b/toolkit/components/prompts/content/commonDialog.css
@@ -4,7 +4,6 @@
 
 :root {
   min-width: 29em;
-  width: min-content;
 }
 
 dialog[insecureauth] {
@@ -69,6 +68,8 @@ dialog[insecureauth] {
 }
 
 :root[subdialog] {
+  /* Ensure we don't crop stuff */
+  width: min-content;
 
   /* use flexbox instead of grid: */
   dialog,
