Bug 1916694 - [devtools] Adapt filter swatch to High Contrast Mode. r=devtools-reviewers,jdescottes.
Differential Revision: https://phabricator.services.mozilla.com/D230645

UltraBlame original commit: 6403784b682c72d5e56ff841d4bf294339d22ac5

--- a/devtools/client/themes/inspector-swatches.css
+++ b/devtools/client/themes/inspector-swatches.css
@@ -153,6 +153,9 @@
 
 .inspector-filterswatch {
   background-image: url("chrome://devtools/skin/images/filter-swatch.svg");
+  -moz-context-properties: stroke, fill;
+  fill: #fff;
+  stroke: #aeb0b1;
 }
 
 .inspector-angleswatch {
@@ -168,7 +171,8 @@
 
 :root[forced-colors-active] :is(
   .inspector-bezierswatch,
-  .inspector-lineareasingswatch
+  .inspector-lineareasingswatch,
+  .inspector-filterswatch
 ) {
   fill: ButtonFace;
   stroke: var(--theme-icon-color);
