Bug 1918351 - Add the basic UI for the onboarding toolbar placement card. r=android-reviewers,amejiamarmol
Differential Revision: https://phabricator.services.mozilla.com/D230552

UltraBlame original commit: be3f26767f23f049f228131a227dfcba98fb496b

--- a/mobile/android/fenix/app/src/main/res/drawable/ic_onboarding_top_toolbar.xml
+++ b/mobile/android/fenix/app/src/main/res/drawable/ic_onboarding_top_toolbar.xml
@@ -15,7 +15,7 @@
       android:strokeLineJoin="round"
       android:strokeWidth="3"
       android:fillColor="#00000000"
-      android:strokeColor="#312A64"/>
+      android:strokeColor="#DBDBDB"/>
   <path
       android:pathData="M3,24L53,24"
       android:strokeWidth="2"
