--- a/browser/themes/shared/autocomplete.css
+++ b/browser/themes/shared/autocomplete.css
@@ -68,16 +68,25 @@
   }
 
   &[originaltype="loginsFooter"] {
-    justify-content: center;
-    color: FieldText;
+    color: currentColor;
     min-height: 2.6666em;
-    border-top: 1px solid rgba(38,38,38,.15);
-    background-color: hsla(0,0%,80%,.35); /* match arrowpanel-dimmed */
+    position: relative;
+    padding-inline-start: 28px;
 
     &:hover,
     &[selected] {
       background-color: hsla(0,0%,80%,.5); /* match arrowpanel-dimmed-further */
     }
+  }
+
+  &[originaltype="loginsFooter"]::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    inset-inline-start: 50%;
+    transform: translateX(-50%);
+    width: 95%;
+    border-top: 1px solid currentColor;
   }
 
   &[originaltype="insecureWarning"] {
@@ -115,10 +124,19 @@
   > .two-line-wrapper {
     box-sizing: border-box;
     display: flex;
+    align-items: center;
     flex-direction: row;
     gap: 8px;
     margin: 0;
     min-width: 0;
+
+    > .ac-site-icon {
+      margin-left: 6px;
+    }
+
+    > .ac-site-icon[src=""] {
+      display: none;
+    }
 
     > .labels-wrapper {
       /* The text should flex while the icon should not */
@@ -244,11 +262,9 @@
 
     &[selected] {
       background-color: var(--arrowpanel-dimmed-further);
-      color: -moz-DialogText;
     }
 
     > .ac-title {
-      color: var(--grey-60);
       font-size: 1em;
     }
 
@@ -262,8 +278,6 @@
 
     > .ac-site-icon {
       list-style-image: url(chrome://global/skin/icons/security-broken.svg);
-      -moz-context-properties: fill;
-      fill: var(--grey-60);
     }
   }
 }
