Bug 1837658 - enable Stylelint length-zero-no-unit r=frontend-codestyle-reviewers,desktop-theme-reviewers,mtigley,settings-reviewers,pip-reviewers,credential-management-reviewers,devtools-reviewers,tabbrowser-reviewers,translations-reviewers,android-reviewers,backup-reviewers,nchevobbe,dao,mconley,tthibaud
This use of units for zero length occasionally gets flagged during theme reviews so it makes sense to establish our preference and automate checks via Stylelint.

Differential Revision: https://phabricator.services.mozilla.com/D230287

UltraBlame original commit: 391784aa5573743bea4ce604a839520df675886d

--- a/browser/fxr/content/prefs.css
+++ b/browser/fxr/content/prefs.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 body {
   margin: 10px 50px;
@@ -61,7 +61,7 @@ body {
 .button_report_issue {
   height: 50px;
   width: 110px;
-  margin: 20px 0px 70px 10px;
+  margin: 20px 0 70px 10px;
 
   font-size: 10px;
   text-align: start;
@@ -128,7 +128,7 @@ body {
 
 .setting_control {
   min-width: 120px;
-  margin: 5px 0px;
+  margin: 5px 0;
 }
 
 button.setting_control {
