--- a/devtools/client/debugger/src/components/ShortcutsModal.css
+++ b/devtools/client/debugger/src/components/ShortcutsModal.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
 .shortcuts-content {
   padding: 15px;
@@ -24,10 +24,10 @@
 
 .shortcuts-list {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   overflow: auto;
-  width: calc(100% - 1px); 
+  width: calc(100% - 1px); /* 1px fixes the hidden right border */
 }
 
 .shortcuts-list li {
