--- a/devtools/client/debugger/src/components/shared/BracketArrow.css
+++ b/devtools/client/debugger/src/components/shared/BracketArrow.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
 .bracket-arrow {
   position: absolute;
@@ -27,13 +27,13 @@
 
 .bracket-arrow.up::after {
   border-bottom-color: var(--theme-body-background);
-  top: 0px;
+  top: 0;
 }
 
 .bracket-arrow.down::before {
   border-bottom-color: transparent;
   border-top-color: var(--theme-splitter-color);
-  top: 0px;
+  top: 0;
 }
 
 .theme-dark .bracket-arrow.down::before {
@@ -49,7 +49,7 @@
 .bracket-arrow.left::before {
   border-left-color: transparent;
   border-right-color: var(--theme-splitter-color);
-  top: 0px;
+  top: 0;
 }
 
 .theme-dark .bracket-arrow.left::before {
@@ -59,6 +59,6 @@
 .bracket-arrow.left::after {
   border-left-color: transparent;
   border-right-color: var(--theme-body-background);
-  top: 0px;
+  top: 0;
   left: 1px;
 }
