--- a/devtools/client/inspector/rules/test/doc_keyframeanimation.css
+++ b/devtools/client/inspector/rules/test/doc_keyframeanimation.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 .box {
   height: 50px;
@@ -15,8 +15,8 @@
 }
 
 #pacman {
-  width: 0px;
-  height: 0px;
+  width: 0;
+  height: 0;
   border-right: 60px solid transparent;
   border-top: 60px solid #FFCB01;
   border-left: 60px solid #FFCB01;
