--- a/dom/crypto/test/test_WebCrypto.css
+++ b/dom/crypto/test/test_WebCrypto.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 body {
 	font-family: Helvetica Neue, Helvetica, Trebuchet MS, Sans-serif;
@@ -29,7 +29,7 @@ a:hover {
 	font-size: 300%;
 	font-weight: lighter;
 	padding: .2ex;
-	padding-bottom: 0ex;
+	padding-bottom: 0;
 	margin-bottom: .5ex;
 	border-bottom: 10px solid #FF9500;
 }
@@ -49,7 +49,7 @@ div.content {
 	margin-top: 2ex;
 }
 
-
+/*------------------------------------------*/
 
 #start {
     background: #FF9500;
