--- a/testing/mozbase/mozlog/mozlog/formatters/html/style.css
+++ b/testing/mozbase/mozlog/mozlog/formatters/html/style.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this file,
+ * You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 body {
 	font-family: Helvetica, Arial, sans-serif;
@@ -25,9 +25,9 @@ table {
 	border-collapse: collapse;
 }
 
-
-
-
+/******************************
+ * SUMMARY INFORMATION
+ ******************************/
 
 #environment td {
 	padding: 5px;
@@ -38,9 +38,9 @@ table {
 	background-color: #f6f6f6;
 }
 
-
-
-
+/******************************
+ * TEST RESULT COLORS
+ ******************************/
 span.pass, .pass .col-result {
 	color: green;
 }
@@ -58,18 +58,18 @@ span.unexpected_pass, .unexpected_pass .col-result {
 	color: red;
 }
 
+/******************************
+ * RESULTS TABLE
+ *
+ * 1. Table Layout
+ * 2. Debug
+ * 3. Sorting items
+ *
+ ******************************/
 
-
-
-
-
-
-
-
-
-
-
-
+/*------------------
+ * 1. Table Layout
+ *------------------*/
 
 #results-table {
 	border: 1px solid #e6e6e6;
@@ -87,9 +87,9 @@ span.unexpected_pass, .unexpected_pass .col-result {
 	font-weight: bold
 }
 
-
-
-
+/*------------------
+ * 2. Debug
+ *------------------*/
 
 .log:only-child {
 	height: inherit
@@ -115,24 +115,24 @@ div.screenshot img {
 	height: 220px
 }
 
-
+/*if the result is passed or xpassed don't show debug row*/
 .passed + .debug, .unexpected.pass + .debug {
 	display: none;
 }
 
-
-
-
+/*------------------
+ * 3. Sorting items
+ *------------------*/
 .sortable {
 	cursor: pointer;
 }
 
 .sort-icon {
-	font-size: 0px;
+	font-size: 0;
 	float: left;
 	margin-right: 5px;
 	margin-top: 5px;
-	
+	/*triangle*/
 	width: 0;
 	height: 0;
 	border-left: 8px solid transparent;
@@ -140,16 +140,16 @@ div.screenshot img {
 }
 
 .inactive .sort-icon {
-	
+	/*finish triangle*/
 	border-top: 8px solid #E6E6E6;
 }
 
 .asc.active .sort-icon {
-	
+	/*finish triangle*/
 	border-bottom: 8px solid #999;
 }
 
 .desc.active .sort-icon {
-	
+	/*finish triangle*/
 	border-top: 8px solid #999;
 }
