--- a/devtools/client/debugger/src/components/SecondaryPanes/Frames/Group.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/Frames/Group.css
@@ -1,30 +1,37 @@
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
-
-
-
-.frames-group .group,
-.frames-group .group .location {
-  font-weight: 500;
+.frames-group,
+.frames-list .location {
   cursor: default;
-  
-
-
-
-
+  /*
+   * direction:rtl is set in Frames.css to overflow the location text from the
+   * start. Here we need to reset it in order to display the framework icon
+   * after the framework name.
+   */
   direction: ltr;
 }
 
-.frames-group.expanded .group,
-.frames-group.expanded .group .location {
+.frames-group {
+  padding-inline-start: 6px;
+}
+
+.frames-group.expanded,
+.frames-list .location {
   color: var(--theme-highlight-blue);
 }
 
-.frames-group .frames-list {
+.frames-list {
   border-top: 1px solid var(--theme-splitter-color);
   border-bottom: 1px solid var(--theme-splitter-color);
 }
 
-.frames-group.expanded .badge {
+.frames-list div[role="option"].frame {
+  padding-inline-start: 15px;
+}
+
+.frames-group .badge {
   color: var(--theme-highlight-blue);
 }
 
